[gd_scene load_steps=6 format=3 uid="uid://dt7v78sto88o6"]

[ext_resource type="Script" path="res://Scripts/stage.gd" id="1_nobx4"]
[ext_resource type="PackedScene" uid="uid://c5p2uvq66fr8m" path="res://Scenes/gui.tscn" id="2_8firy"]
[ext_resource type="PackedScene" path="res://Scenes/spawn_manager.tscn" id="3_i7wto"]
[ext_resource type="PackedScene" uid="uid://cfkr0uey6yphi" path="res://Scenes/music_controller.tscn" id="4_4ur6n"]
[ext_resource type="PackedScene" uid="uid://egy8w3o8l7o" path="res://Scenes/pause_menu.tscn" id="5_vy7n3"]

[node name="Stage" type="Node"]
script = ExtResource("1_nobx4")

[node name="GUI" parent="." instance=ExtResource("2_8firy")]
visibility_layer = 1025

[node name="SpawnManager" parent="." instance=ExtResource("3_i7wto")]
position = Vector2(400, 1000)

[node name="MusicController" parent="." instance=ExtResource("4_4ur6n")]

[node name="PauseMenu" parent="." instance=ExtResource("5_vy7n3")]
visible = false

[node name="Timer" type="Timer" parent="."]

[connection signal="pause" from="." to="SpawnManager" method="_on_stage_pause"]
[connection signal="pause" from="." to="MusicController" method="_on_stage_pause"]
[connection signal="play" from="." to="SpawnManager" method="_on_stage_play"]
[connection signal="play" from="." to="MusicController" method="_on_stage_play"]
[connection signal="tooLate" from="SpawnManager" to="." method="_on_spawn_manager_too_late"]
[connection signal="processed_json" from="MusicController" to="." method="_on_music_controller_processed_json"]
[connection signal="song_finished" from="MusicController" to="." method="_on_music_controller_song_finished"]
[connection signal="play" from="PauseMenu" to="." method="_on_pause_menu_play"]
[connection signal="restart" from="PauseMenu" to="." method="_on_pause_menu_restart"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
